<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">vertuoguide</string>
  <string name="email">E-mail</string>
  <string name="start_sesssion">Iniciar sessão</string>
  <string name="email_required">E-mail obrigatório</string>
  <string name="invalid_email">E-mail inválido</string>
  <string name="invalid_capsules">Quantidade de capsulas inválida</string>
  <string name="password_required">Senha obrigatória</string>
  <string name="unauthorized">Credenciais inválidas</string>
  <string name="sign_in">Acessar minha conta</string>
  <string name="create_account">Nova conta</string>
  <string name="new_coffee">Nova conta</string>
  <string name="name">nome</string>
  <string name="description">descrição</string>
  <string name="intensity">intensidade</string>
  <string name="quantity">quantidade em ml</string>
  <string name="capsules">Capsulas</string>
  <string name="saved">Salvo com sucesso</string>
  <string name="inventory">inventário</string>
  <string name="save">Salvar</string>
  <string name="drink">Tomar agora</string>
  <string name="available_capsules">Capsulas disponíveis: </string>
  <string name="available_coffees">cafés disponíveis</string>
  <string name="drink_now">Tomar agora</string>
  <string name="drinked">tomado</string>
  <string name="capsules_example">10</string>
  <string name="politics_and_terms">Políticas e termos</string>
  <string name="coffee_type">Tipo do café</string>
  <string name="make_an_assessment">Fazer uma avaliação</string>
  <string name="add_coffee">Adicionar</string>
  <string name="share">Compartilhar</string>
  <string name="notifications">Notificações</string>
  <string name="perfil">Perfil</string>
  <string name="exit">Sair</string>
  <string name="confirm_password">Confirme a senha</string>
  <string name="password">Senha</string>
  <string name="register_now">registre agora!</string>
  <string name="coffee_not_found">Café não encontrado</string>
  <string name="enter_email">Por favor, digite o e-mail</string>
  <string name="enter_password">Por favor, digite a senha</string>
  <string name="enter_password_confirmation">Por favor, confirme a senha</string>
  <string name="enter_correct_email">Por favor, digite um e-mail válido</string>
  <string name="correctly_created_user">Usuário criado corretamente</string>
  <string name="passwords_different">As senhas estão diferentes, coloque uma correta</string>
  <string name="to_do_list" translatable="false">To Do List</string>
  <string name="put_task_empty" translatable="false">Digite o nome da sua Tarefa</string>
</resources>